<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更 多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新…</string>
    <string name="p2refresh_doing_end_refresh">加载中…</string>
    <string name="p2refresh_refresh_lasttime">最近更新 : </string>
    <string name="app_name">车商管家</string>
    <string name="action_settings">设置</string>
    <string name="company_name">车商管家</string>
    <string name="notification_title">新消息</string>
    <string name="packagename">managerclient.apk</string>
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="press_again_exit">再按一次退出车商管家</string>
    <string name="add_avator">头像</string>
    <string name="tips">提示</string>
    <string name="usernamehint">请输入您的帐号</string>
    <string name="userpwdhint">请输入您的密码</string>
    <string name="get_pwd_back">找回密码</string>
    <string name="login">登录</string>
    <string name="loging">正在登录</string>
    <string name="loginerror">密码或帐号错误</string>
    <string name="updating">正在更新数据</string>
    <string name="linkerror">网络不给力，请稍候再试</string>
    <string name="noreply">这里是空的</string>
    <string name="noreportrecord">没有汇报记录</string>
    <string name="noreport">暂无汇报</string>
    <string name="orderlist">订单：</string>
    <string name="insurance">保险：</string>
    <string name="outstock">出库：</string>
    <string name="stock">库存：</string>
    <string name="visitor">客流：</string>
    <string name="infacory">进厂：</string>
    <string name="earnmoney">产值：</string>
    <string name="keepfit">保养：</string>
    <string name="machine">机电：</string>
    <string name="fans">粉丝</string>
    <string name="guests">潜客</string>
    <string name="binds">车主</string>
    <string name="sale">销售订单</string>
    <string name="zero">0</string>
    <string name="aftersale">售后产值</string>
    <string name="aftersale_title">售后报表</string>
    <string name="operationdata">运营数据</string>
    <string name="msgpush">信息推送：</string>
    <string name="satisfied">销售满意度</string>
    <string name="aftersatisfied">售后满意度</string>
    <string name="pointment">预约台次：</string>
    <string name="insure">续保询价：</string>
    <string name="contacts">通讯录</string>
    <string name="error">更新数据失败，请稍后再试</string>
    <string name="neterror">没有可用网络</string>
    <string name="requesterror">网络不给力，请稍后再试</string>
    <string name="inputerror">亲，输入内容不能为空</string>
    <string name="commiterror">提交失败，请稍后再试</string>
    <string name="commitsucess">汇报成功</string>
    <string name="consult_title">询价明细</string>
    <string name="name_empty">帐号不能为空</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="name_illegal">帐号格式有误</string>
    <string name="pwd_illegal">密码错误</string>
    <string name="refresh">刷新</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">星期</string>
    <string name="back">返回</string>
    <string name="salereport_title">销售汇报</string>
    <string name="satisfy_title">满意度报表</string>
    <string name="reply_title">回复明细</string>
    <string name="appointment_title">预约明细</string>
    <string name="listname">项目</string>
    <string name="state">状态</string>
    <string name="today">当天</string>
    <string name="toweek">本周</string>
    <string name="tomonth">本月</string>
    <string name="toyear">本年</string>
    <string name="satisfy">满意</string>
    <string name="notsatisfy">不满意</string>
    <string name="justsoso">一般</string>
    <string name="insurance_date">询价日期</string>
    <string name="insurance_time">询价时间</string>
    <string name="license_number">车牌号</string>
    <string name="time_line">到期日</string>
    <string name="contact_name">联系人</string>
    <string name="more">点击添加更多</string>
    <string name="sortbytime">预约</string>
    <string name="sortbyarrive">到店</string>
    <string name="servicename">服务类型</string>
    <string name="add">添加</string>
    <string name="contacts_number">电话号码（必填）</string>
    <string name="contacts_name">名称</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="call">拨打电话</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="get_contacts">查看通讯录</string>
    <string name="tiao">条</string>
    <string name="tai">台</string>
    <string name="time">时间</string>
    <string name="app_date">预约日期</string>
    <string name="arr_date">到店日期</string>
    <string name="phone_name_empty">名称不能为空</string>
    <string name="phone_number_empty">电话号码不能为空</string>
    <string name="notdeal">未处理</string>
    <string name="notice">友情提示：</string>
    <string name="exitornot">亲，确定要退出么？</string>
    <string name="exityes">好的</string>
    <string name="exitno">点错了</string>
    <string name="clearcache">亲，确定要清除缓存么？</string>
    <string name="clearok">成功清除</string>
    <string name="updatetips">更新提示</string>
    <string name="updatesure">更新软件</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
</resources>
